# vision

./: .gitignore  PROJECT_STATE.md  README.md  SETUP_IN_VM.md  alembic.ini  pyproject.toml  start-hmi.ps1  testocrjob.json
alembic/: env.py
docs/: 01-vision-scope-positioning.md  02-competitive-research.md  03-requirements-and-roadmap.md  04-system-architecture.md  05-ocr-ocv-engine.md  06-compliance.md  07-research-backlog.md  08-project-structure.md  09-data-and-audit.md  10-camera-module.md  11-ocv-fonts.md  12-integration-protocol.md  18-web-api.md  19-mac-gige-setup.md  20-windows-setup.md  21-linux-vm-setup.md
docs/decisions/: decision-log.md
docs/deployment/: installation.md
docs/validation/: 01-validation-plan.md  02-iq.md  03-oq.md  04-part11-compliance-matrix.md  05-traceability-matrix.md  README.md
packaging/: README.md  vis-hmi.spec
scripts/: app_cam_check.py  aravis_snapshot.py  aravis_worker.py  benchmark.py  fetch_ocr_models.py  fetch_ppocrv4.py  fix_single_camera.py  gentl_diag.py  gentl_grab.py  gentl_probe.py  live_focus.py  mac_gige_tune.sh  provision_linux.sh  train_carton_font.py  unlock_user.py
src/vis/: __init__.py  cli.py  config.py
src/vis/camera/: __init__.py  aravis_cam.py  aravis_proc.py  calibration.py  camera_config.py  device.py  discovery.py  file_source.py  focus.py  genicam.py  hikrobot.py  lighting.py  manager.py  settings.py  settings_store.py  status.py
src/vis/common/: events.py  trusted_time.py  types.py
src/vis/db/: __init__.py  app_settings.py  audit.py  audit_review.py  backup.py  base.py  batches.py  challenge.py  fonts.py  models.py  oee.py  products.py  recipe_io.py  reconciliation.py  serials.py  stations.py  store.py  users.py
src/vis/domain/: entities.py
teachimage/emulation_results/: results.csv
tests/: test_admin_window.py  test_aravis.py  test_aravis_proc.py  test_assembler.py  test_audit.py  test_audit_review.py  test_auth.py  test_batch.py  test_batch_fields.py  test_camera.py  test_challenge.py  test_code_verify.py  test_config.py  test_content_crop.py  test_data_deploy.py  test_discovery_lighting.py  test_emulate.py  test_end_to_end.py  test_focus.py  test_font_library.py  test_font_train.py  test_general_tools.py  test_gs1.py  test_gs1_validation.py  test_hikrobot.py  test_hmi.py  test_integration.py  test_integration_c.py  test_integration_e2e.py  test_live_batch.py  test_locator.py  test_management.py  test_ocr.py  test_ocr_bench.py  test_ocv_font.py  test_oee.py  test_operator_flow.py  test_overlay.py  test_pass_logic.py  test_persistence.py  (+21 more)
(+91 files in other folders)
