[project]
name = "vision-inspection"
version = "0.0.1"
description = "Pharma inline print & code verification system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["numpy>=1.24", "SQLAlchemy>=2.0"]

# Optional heavy deps are not needed for the walking skeleton.
[project.optional-dependencies]
codes = ["zxing-cpp>=2.2"]        # 1D/2D decode: DataMatrix, QR, Code128, ... (cross-platform wheels)
ocr = ["rapidocr-onnxruntime>=1.2"]  # ONNX PaddleOCR (PP-OCR) for OCV text (docs/05)
engine = ["onnxruntime>=1.17", "opencv-python>=4.9"]
camera = ["harvesters>=1.4"]      # GenICam/GigE acquisition (Windows; see D-011)
io = ["pymodbus>=3.5"]            # digital reject I/O over Modbus TCP (line hardware)
hmi = ["PySide6>=6.6"]           # Qt desktop HMI (the line operator interface, D-015)
postgres = ["psycopg[binary]>=3.1", "alembic>=1.13"]  # production DB driver + migrations (D-013)
dev = ["pytest>=8.0", "ruff>=0.4", "zxing-cpp>=2.2", "qrcode[pil]>=7.4", "rapidocr-onnxruntime>=1.2"]

[project.scripts]
vis-demo = "vis.cli:main"
vis-hmi = "vis.hmi.app:main"
vis-emulate = "vis.runtime.emulate:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
